k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-service
spec:
  type: NodePort
  selector:
    app: golang-app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30007
